--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -19,6 +19,30 @@ jobs:
     - name: Set execute permissions for scripts
       run: chmod +x scripts/*.sh 
 
+    - name: Install Snyk
+      run: npm install -g snyk
+
+    - name: Authenticate Snyk
+      run: snyk auth ${{ secrets.SNYK_TOKEN }}
+
+    - name: Install SonarQube Scanner
+      run: |
+        wget -qO - https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.7.0.2747-linux.zip | bsdtar -xf - -C /opt
+        echo "/opt/sonar-scanner-4.7.0.2747-linux/bin" >> $GITHUB_PATH
+
+    - name: Install OWASP ZAP
+      run: sudo apt-get update && sudo apt-get install -y zaproxy
+
+    - name: Install Semgrep
+      run: pip install semgrep
+
+    - name: Install Trivy
+      run: |
+        sudo apt-get install -y wget
+        wget https://github.com/aquasecurity/trivy/releases/latest/download/trivy_0.46.0_Linux-64bit.tar.gz
+        tar zxvf trivy_0.46.0_Linux-64bit.tar.gz
+        sudo mv trivy /usr/local/bin/
+
     - name: Run SCA (Static Code Analysis)
       run: ./scripts/sca_scan.sh
 
