--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -22,8 +22,10 @@ jobs:
     - name: Install Snyk
       run: npm install -g snyk
 
-    - name: Authenticate Snyk
-      run: snyk auth ${{ secrets.SNYK_TOKEN }}
+    - name: Authenticate Snyk using API Token
+      env:
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      run: snyk auth $SNYK_TOKEN
 
     - name: Install SonarQube Scanner
       run: |
