--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -21,9 +21,11 @@ jobs:
 
     - name: Install SonarQube Scanner
       run: |
-        wget -qO - https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.7.0.2747-linux.zip | bsdtar -xf - -C /opt
-        echo "/opt/sonar-scanner-4.7.0.2747-linux/bin" >> $GITHUB_PATH
-
+        sudo apt-get update && sudo apt-get install -y unzip
+        wget -qO sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.7.0.2747-linux.zip
+        unzip sonar-scanner.zip -d /opt/sonar-scanner
+        echo "/opt/sonar-scanner/sonar-scanner-4.7.0.2747-linux/bin" >> $GITHUB_PATH
+    
     - name: Install OWASP ZAP
       run: sudo apt-get update && sudo apt-get install -y zaproxy
 
