--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -28,11 +28,14 @@ jobs:
     
     - name: Install OWASP ZAP
       run: |
-          wget -qO zap.tar.gz https://github.com/zaproxy/zaproxy/releases/latest/download/ZAP_2_16_0_Linux.tar.gz
+          sudo apt-get update && sudo apt-get install -y wget jq
+          ZAP_URL=$(curl -s https://api.github.com/repos/zaproxy/zaproxy/releases/latest | jq -r '.assets[] | select(.name | endswith("Linux.tar.gz")) | .browser_download_url')
+          wget -qO zap.tar.gz "$ZAP_URL"
           if [ ! -s zap.tar.gz ]; then echo "Download failed!"; exit 1; fi
           mkdir -p /opt/zaproxy
           tar -xvzf zap.tar.gz -C /opt/zaproxy --strip-components=1 || exit 1
           echo "/opt/zaproxy" >> $GITHUB_PATH
+      
       
     - name: Install Semgrep
       run: pip install semgrep
