--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -45,6 +45,15 @@ jobs:
         sudo apt-get update && sudo apt-get install -y wget jq
         wget -qO - https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sudo bash
     
+    - name: Ensure required dependencies are installed
+      run: |
+        for pkg in wget jq unzip; do
+          if ! dpkg -s $pkg &> /dev/null; then
+            sudo apt-get update && sudo apt-get install -y $pkg
+          else
+            echo "$pkg is already installed."
+          fi
+        done
 
     - name: Install OWASP Dependency-Check
       run: |
@@ -54,8 +63,7 @@ jobs:
           unzip -o dependency-check.zip -d /opt/dependency-check
           echo "/opt/dependency-check/bin" >> $GITHUB_PATH
       
-      
-      
+
     - name: Run SCA (Static Code Analysis) with OWASP Dependency-Check
       run: dependency-check --scan ./ --format HTML --out reports/dependency-check-report.html
 
