--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -19,19 +19,6 @@ jobs:
     - name: Set execute permissions for scripts
       run: chmod +x scripts/*.sh 
 
-    - name: Install SonarQube Scanner
-      run: |
-          sudo apt-get update && sudo apt-get install -y unzip
-          wget -qO sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.7.0.2747-linux.zip
-          unzip sonar-scanner.zip -d /opt/sonar-scanner
-          echo "/opt/sonar-scanner/sonar-scanner-4.7.0.2747-linux/bin" >> $GITHUB_PATH
-          export PATH="/opt/sonar-scanner/sonar-scanner-4.7.0.2747-linux/bin:$PATH"
-
-    - name: Start SonarQube
-      run: |
-        docker run -d --name sonar -p 9000:9000 sonarqube:lts
-        sleep 30  # Chờ SonarQube khởi động
-
     - name: Install OWASP ZAP
       run: |
         sudo apt-get update && sudo apt-get install -y wget jq
@@ -57,7 +44,7 @@ jobs:
         echo "/usr/local/bin" >> $GITHUB_PATH
         export PATH="/usr/local/bin:$PATH"
 
-    - name: Run SCA (Static Code Analysis) with Trivy
+    - name: Run SCA (Static Code Analysis)
       run: ./scripts/sca_scan.sh
   
     - name: Run SAST (Static Application Security Testing)
