--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -54,12 +54,14 @@ jobs:
           export PATH="/usr/local/bin:$PATH"
           nuclei -version  
   
-    - name: Install AppScan 
-      run: |
-        wget -qO - https://appscan.com/install.sh | bash
-        echo "/usr/local/bin/appscan" >> $GITHUB_PATH
-        export PATH="/usr/local/bin:$PATH"
-
+          - name: Install Bearer (IAST)
+          run: |
+            curl -sfL https://raw.githubusercontent.com/Bearer/bearer/main/install.sh | sh
+            sudo mv ~/.bearer/bin/bearer /usr/local/bin/
+            echo "/usr/local/bin" >> $GITHUB_PATH
+            export PATH="/usr/local/bin:$PATH"
+            bearer version 
+    
     - name: Run SCA (Static Code Analysis)
       run: ./scripts/sca_scan.sh
   
