--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -54,15 +54,16 @@ jobs:
           export PATH="/usr/local/bin:$PATH"
           nuclei -version  
   
-    - name: Install Bearer
+    - name: Install Bearer (IAST)
       run: |
         sudo apt-get update && sudo apt-get install -y curl git
-        curl -sfL https://raw.githubusercontent.com/Bearer/bearer/main/contrib/install.sh | sh
-        sudo mv ./bin/bearer /usr/local/bin/
+        sudo curl -sfL https://raw.githubusercontent.com/Bearer/bearer/main/contrib/install.sh | sudo sh
+        sudo mv /root/.bearer/bin/bearer /usr/local/bin/
         sudo chmod +x /usr/local/bin/bearer
         echo "/usr/local/bin" >> $GITHUB_PATH
         export PATH="/usr/local/bin:$PATH"
-        bearer version 
+        bearer version  
+    
      
     - name: Run SCA (Static Code Analysis)
       run: ./scripts/sca_scan.sh
