--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -57,12 +57,14 @@ jobs:
     - name: Install Bearer (IAST)
       run: |
         sudo apt-get update && sudo apt-get install -y curl git
+        export BEARER_INSTALL_DIR="$HOME/bearer/bin"
         curl -sfL https://raw.githubusercontent.com/Bearer/bearer/main/contrib/install.sh | sh
-        sudo mv ./bin/bearer /usr/local/bin/
+        sudo mv $HOME/bearer/bin/bearer /usr/local/bin/
         sudo chmod +x /usr/local/bin/bearer
         echo "/usr/local/bin" >> $GITHUB_PATH
         export PATH="/usr/local/bin:$PATH"
-        bearer version 
+        bearer version  
+      
     
     
      
