--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -54,16 +54,15 @@ jobs:
           export PATH="/usr/local/bin:$PATH"
           nuclei -version  
   
-    - name: Install Bearer (IAST)
+    - name: Install Gosec (IAST)
       run: |
-        sudo apt-get update && sudo apt-get install -y curl git
-        export BEARER_INSTALL_DIR="$HOME/bearer/bin"
-        curl -sfL https://raw.githubusercontent.com/Bearer/bearer/main/contrib/install.sh | sh
-        sudo mv $HOME/bearer/bin/bearer /usr/local/bin/
-        sudo chmod +x /usr/local/bin/bearer
+        sudo apt-get update && sudo apt-get install -y golang
+        go install github.com/securego/gosec/v2/cmd/gosec@latest
+        sudo mv ~/go/bin/gosec /usr/local/bin/
         echo "/usr/local/bin" >> $GITHUB_PATH
         export PATH="/usr/local/bin:$PATH"
-        bearer version  
+        gosec -version  
+    
       
     
     
