--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -45,19 +45,16 @@ jobs:
         echo "/usr/local/bin" >> $GITHUB_PATH
         export PATH="/usr/local/bin:$PATH"
 
-    - name: Install Gauntlt 
+    - name: Install Deepfence ThreatMapper 
       run: |
-        sudo apt-get update && sudo apt-get install -y ruby bundler git
-        git clone https://github.com/gauntlt/gauntlt.git
-        cd gauntlt
-        source ./install_gauntlt_deps.sh
-        bash ./ready_to_rumble.sh
-        echo "$(gem env home)/bin" >> $GITHUB_PATH
-        export PATH="$(gem env home)/bin:$PATH"
-        gauntlt --version 
+        sudo apt-get update && sudo apt-get install -y golang
+        go install github.com/deepfence/ThreatMapper/cmd/threatmapper@latest
+        sudo mv ~/go/bin/threatmapper /usr/local/bin/
+        echo "/usr/local/bin" >> $GITHUB_PATH
+        export PATH="/usr/local/bin:$PATH"
+        threatmapper --version 
   
-  
-  
+
     - name: Install Gosec
       run: |
         sudo apt-get update && sudo apt-get install -y golang
