--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -45,15 +45,15 @@ jobs:
         echo "/usr/local/bin" >> $GITHUB_PATH
         export PATH="/usr/local/bin:$PATH"
 
-    - name: Install Veracode CLI 
+    - name: Install Katana
       run: |
-        sudo apt-get update && sudo apt-get install -y curl unzip
-        curl -sSLO https://downloads.veracode.com/securityscan/veracode-cli-linux.zip
-        unzip veracode-cli-linux.zip
-        sudo mv veracode /usr/local/bin/
+        sudo apt-get update && sudo apt-get install -y golang
+        go install github.com/projectdiscovery/katana/cmd/katana@latest
+        sudo mv ~/go/bin/katana /usr/local/bin/
         echo "/usr/local/bin" >> $GITHUB_PATH
         export PATH="/usr/local/bin:$PATH"
-        veracode --version  
+        katana -version 
+  
 
 
     - name: Install Gosec
