--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "express": "^4.21.2",
-    "express-session": "^1.18.1"
-  }
+    "express": "4.16.0",  
+    "body-parser": "1.18.3",  
+    "express-session": "1.15.6"  
+}
 }
